--- a/jupyter/Landcover/Dockerfile
+++ b/jupyter/Landcover/Dockerfile
@@ -1,33 +1,40 @@
-# Force cache external image to the private registry
-FROM ubuntu:20.04
+FROM jupyter/scipy-notebook:45bfe5a474fa
 
-# Install base binary packages
-RUN apt-get update && DEBIAN_FRONTEND="noninteractive" apt-get -y --no-install-recommends \
-    install tzdata gcc python3.8-dev python3-setuptools curl lsb-release python3.8-venv python3-numpy gnupg2 && \
-    rm -rf /var/lib/apt/lists/*
+USER root
 
-# Install gcloud
-RUN echo "deb http://packages.cloud.google.com/apt cloud-sdk main" |  tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg |  apt-key add -
-RUN apt-get update && apt-get install --no-install-recommends -y google-cloud-sdk python3-crcmod kubectl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y \
+    git \
+    gcc libspatialindex-dev python3-dev
 
-#setup venv
-RUN python3.8 -m venv /env
-ENV VIRTUAL_ENV /env
-ENV PATH /env/bin:$PATH
-RUN pip install --no-cache-dir -U pip
+COPY requirements.txt requirements.txt /tmp/
+RUN pip install --requirement /tmp/requirements.txt && \
+    fix-permissions $CONDA_DIR && \
+    fix-permissions /home/$NB_USER
 
-# Install requirements for opencv
-RUN apt-get update && apt-get install --no-install-recommends -y libsm6 libxext6 libxrender-dev python3-tk && rm -rf /var/lib/apt/lists/*
+# environment name, python 3.x version
+ARG conda_env=python37
+ARG py_ver=3.7
 
-# Install geospatial binary packages
-RUN apt-get update && apt-get install --no-install-recommends -y libproj-dev gdal-bin libgdal-dev python3-gdal && rm -rf /var/lib/apt/lists/*
+RUN conda create --quiet --yes -p $CONDA_DIR/envs/$conda_env python=$py_ver ipython ipykernel && \
+    conda clean --all -f -y
 
-ENV PATH /usr/include/gdal:$PATH
+# create Python 3.x environment and link it to jupyter
+RUN $CONDA_DIR/envs/${conda_env}/bin/python -m ipykernel install --user --name=${conda_env} && \
+    fix-permissions $CONDA_DIR && \
+    fix-permissions /home/$NB_USER
 
-# Copy the application's requirements.txt and run pip to install all
-# dependencies into the virtualenv.
-ADD requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
+USER $NB_UID
+
+# any additional pip installs
+RUN $CONDA_DIR/envs/${conda_env}/bin/pip install --requirement /tmp/requirements.txt && \
+                                                   fix-permissions $CONDA_DIR && \
+                                                   fix-permissions /home/$NB_USER
+
+# prepend conda environment to path
+ENV PATH $CONDA_DIR/envs/${conda_env}/bin:$PATH
+
+# Using python37 env by default
+ENV CONDA_DEFAULT_ENV ${conda_env}
 
 COPY jupyter_notebook_config.json /etc/jupyter/
