--- a/jupyter/Landcover/jupyter_notebook_config.json
+++ b/jupyter/Landcover/jupyter_notebook_config.json
@@ -1,5 +1,5 @@
 {
     "NotebookApp": {
-        "password": "sha1:e49e73b0eb0e:a268a2c9c7f7f24c07393b8a0852684de4b62ff8"
+        "password": "argon2:$argon2id$v=19$m=10240,t=10,p=8$xjV2VuXfOdrjmqByCU29gA$+k3SBfXKBPni/nmkFrZvVA"
     }
 }
