--- a/jupyter/Landcover/jupyter_notebook_config.json
+++ b/jupyter/Landcover/jupyter_notebook_config.json
@@ -1,5 +1,5 @@
 {
     "NotebookApp": {
-        "password": "argon2:$argon2id$v=19$m=10240,t=10,p=8$xjV2VuXfOdrjmqByCU29gA$+k3SBfXKBPni/nmkFrZvVA"
+        "password": "argon2:$argon2id$v=19$m=10240,t=10,p=8$YQ047LTtnB0jm6M54wwGGA$dFwyEOesYv/umSRcU7yR+g"
     }
 }
