--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -14,6 +14,15 @@ server {
 }
 
 server {
+    listen 443 ssl;
+    server_name  soilmateukraine.quantumobile.co;
+
+    location / {
+        return 301 https://demo.soilmate.ai$request_uri;
+    }
+}
+
+server {
     listen 80;
     server_name demo.soilmate.ai;
 
