20876/add POSTGRES_HOST&POSTGRES_PORT to configmap

--- a/k8s/configMap.yaml
+++ b/k8s/configMap.yaml
@@ -5,4 +5,8 @@ metadata:
   namespace: prod
 data:
   POSTGRES_DB: sip_db
+  POSTGRES_HOST: postgres
+  POSTGRES_PORT: "5432"
   DJANGO_SETTINGS_MODULE: sip.settings-prod
+  MAPBOX_ACCESS_TOKEN: ""
+
