20876/add image to webserver deployment

--- a/k8s/webserver/webserver-deployment.yaml
+++ b/k8s/webserver/webserver-deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: <Image>
-        imagePullPolicy: "Always"
+        image: registry.quantumobile.co/sip-web-server:latest
+        imagePullPolicy: "IfNotPresent"
         resources:
           limits:
             memory: "500Mi"
