--- a/k8s/webapplication/web-application-service.yaml
+++ b/k8s/webapplication/web-application-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-application
+  name: webapplication
   namespace: prod
   labels:
     app: web-application
@@ -10,6 +10,7 @@ spec:
   ports:
     - port: 9000
       targetPort: 9000
+      name: webapplication
   selector:
     app: web-application
     tier: backend
