20876/add ability to pull images for deployments

--- a/k8s/webapplication/web-application-deployment.yaml
+++ b/k8s/webapplication/web-application-deployment.yaml
@@ -45,6 +45,8 @@ spec:
           volumeMounts:
               - name: sip-data-volume
                 mountPath: /data
+      imagePullSecrets:
+        - name: regcred
       volumes:
         - name: sip-data-volume
           persistentVolumeClaim:
