20876/kind local dev config&helpers

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
   - "secret.yaml"
   - "configMap.yaml"
 
-  # Volumes amc claims
+  # Volumes and claims
   ## Database
   - "./postgresql/postgresql-persistent-volume.yaml"
   - "./postgresql/postgresql-volume-claim.yaml"
@@ -13,14 +13,15 @@ resources:
   ## Mapbox cache
   - "./mapbox-cache/mapbox-cache-pv.yaml"
   - "./mapbox-cache/mapbox-cache-pvc.yaml"
-  # Deployments
-  ## Database
-  - "./postgresql/postgresql-deployment.yaml"
-  - "./postgresql/postgresql-service.yaml"
-  ## Web application
-  - "./webapplication/web-application-deployment.yaml"
-  - "./webapplication/web-application-service.yaml"
-  ## Web server
-  - "./webserver/webserver-deployment.yaml"
-  - "./webserver/webserver-service.yaml"
+  # # Deployments
+  # ## Database
+  # - "./postgresql/postgresql-deployment.yaml"
+  # - "./postgresql/postgresql-service.yaml"
+  # ## Web application
+  # - "./webapplication/web-application-deployment.yaml"
+  # - "./webapplication/web-application-service.yaml"
+  # - "./webapplication/web-application-nodeport.yaml"
+  # ## Web server
+  # - "./webserver/webserver-deployment.yaml"
+  # - "./webserver/webserver-service.yaml"
 
