--- a/k8s/postgresql/postgresql-persistent-volume.yaml
+++ b/k8s/postgresql/postgresql-persistent-volume.yaml
@@ -12,8 +12,13 @@ spec:
     storage: 1Gi # Sets PV Volume
   accessModes:
     - ReadWriteOnce
-  hostPath:
-    path: "/mnt/postgres"
+  # hostPath:
+  #   path: "/mnt/postgres"
+  nfs:
+    server: 172.18.0.1
+    path: "/db"
+    readOnly: false
+  persistentVolumeReclaimPolicy: Retain
   claimRef:
     apiVersion: v1
     kind: PersistentVolumeClaim
