--- a/k8s/webserver/webserver-service.yaml
+++ b/k8s/webserver/webserver-service.yaml
@@ -1,19 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webserver
-  namespace: prod
-  labels:
-    app: sip
+  name: webserver-service
 spec:
-#  type: LoadBalancer
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 80
-      nodePort:  31080
-      protocol: TCP
-      name: http
   selector:
     app: sip
     tier: frontend
+  ports:
+    - port: 80
+      targetPort: 80
