--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: sip-secret
-  namespace: prod
+  namespace: sip
 type: Opaque
 data:
   postgresname: c2lw
