--- a/k8s/mapbox-cache/mapbox-cache-pv.yaml
+++ b/k8s/mapbox-cache/mapbox-cache-pv.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mapbox-cache-pv  # Sets PV's name
-  namespace: prod
+  namespace: sip
   labels:
     app: web-application
 spec:
@@ -22,4 +22,4 @@ spec:
     apiVersion: v1
     kind: PersistentVolumeClaim
     name: mapbox-cache-volumeclaim
-    namespace: prod
+    namespace: sip
