--- a/k8s/mapbox-cache/mapbox-cache-pvc.yaml
+++ b/k8s/mapbox-cache/mapbox-cache-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mapbox-cache-volumeclaim
-  namespace: prod
+  namespace: sip
 spec:
   # storageClassName: standard
   accessModes:
