--- a/k8s/postgresql/postgresql-service-nodeport.yaml
+++ b/k8s/postgresql/postgresql-service-nodeport.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-nodeport
-  namespace: prod
+  namespace: sip
   labels:
     app: sip
 spec:
