--- a/k8s/postgresql/postgresql-service.yaml
+++ b/k8s/postgresql/postgresql-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: prod
+  namespace: sip
 spec:
   selector:
     app: postgres
