--- a/k8s/sip-ingres.yaml
+++ b/k8s/sip-ingres.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sip-ingress
-  namespace: prod
+  namespace: sip
   labels:
     name: sip-ingress
 spec:
