--- a/k8s/webapplication/web-application-nodeport.yaml
+++ b/k8s/webapplication/web-application-nodeport.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-application-nodeport
-  namespace: prod
+  namespace: sip
   labels:
     app: sip
 spec:
