--- a/k8s/webapplication/web-application-pvc.yaml
+++ b/k8s/webapplication/web-application-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sip-data-volumeclaim
-  namespace: prod
+  namespace: sip
 spec:
   # storageClassName: standard
   accessModes:
