--- a/k8s/webapplication/web-application-service.yaml
+++ b/k8s/webapplication/web-application-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapplication
-  namespace: prod
+  namespace: sip
   labels:
     app: web-application
 spec:
