--- a/k8s/webserver/webserver-service-nodeport.yaml
+++ b/k8s/webserver/webserver-service-nodeport.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webserver-nodeport
-  namespace: prod
+  namespace: sip
   labels:
     app: sip
 spec:
