--- a/k8s/webserver/webserver-service.yaml
+++ b/k8s/webserver/webserver-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webserver-service
-  namespace: prod
+  namespace: sip
 spec:
   selector:
     app: sip
