--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
 data:
   postgresname: c2lw
   postgrespassword: ZWlKMmtvbzY=
-  MAPBOX_ACCESS_TOKEN: ""
+  MAPBOX_ACCESS_TOKEN: cGsuZXlKMUlqb2laRzFwZEhKcE1UY3hNQ0lzSW1FaU9pSmpiRGc1Y2poMlpHSXdPWEJtTTNCdU16YzVlVFp2WWpWcUluMC4yQzl3S1NoaGpqY05ja2YzbXhSN09R
