--- a/k8s/mapbox-cache/mapbox-cache-pv.yaml
+++ b/k8s/mapbox-cache/mapbox-cache-pv.yaml
@@ -1,18 +1,15 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: mapbox-cache-pv  # Sets PV's name
+  name: mapbox-cache-pv 
   namespace: sip
   labels:
     app: web-application
 spec:
-  # storageClassName: standard
   capacity:
-    storage: 5Gi # Sets PV Volume
+    storage: 5Gi
   accessModes:
     - ReadWriteMany
-  # hostPath:
-  #   path: "/mnt/data"
   nfs:
     server: 172.18.0.1
     path: "/mapbox"
@@ -21,5 +18,5 @@ spec:
   claimRef:
     apiVersion: v1
     kind: PersistentVolumeClaim
-    name: mapbox-cache-volumeclaim
+    name: mapbox-cache-pvc
     namespace: sip
