--- a/k8s/volumes/sip-data-pvc.yaml
+++ b/k8s/volumes/sip-data-pvc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pgsql-volumeclaim
+  name: sip-data-pvc
   namespace: sip
 spec:
-  # storageClassName: standard
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Gi
