--- a/k8s/webserver/webserver.yaml
+++ b/k8s/webserver/webserver.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: webserver-service
+  namespace: sip
+spec:
+  selector:
+    app: sip
+    tier: frontend
+  ports:
+    - port: 80
+      targetPort: 80
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -40,14 +53,14 @@ spec:
         volumeMounts:
           - mountPath: /data
             name: sip-data-storage
-          - mountPath: /data/mapboxcache
-            name: mapbox-cache-storage
+          # - mountPath: /data/mapboxcache
+          #   name: mapbox-cache-storage
       imagePullSecrets:
         - name: regcred
       volumes:
         - name: sip-data-storage
           persistentVolumeClaim:
-            claimName: sip-data-volumeclaim
-        - name: mapbox-cache-storage
-          persistentVolumeClaim:
-            claimName: mapbox-cache-volumeclaim
+            claimName: sip-data-pvc
+        # - name: mapbox-cache-storage
+        #   persistentVolumeClaim:
+        #     claimName: mapbox-cache-pvc
