--- a/k8s/helpers/kind-config.yaml
+++ b/k8s/helpers/kind-config.yaml
@@ -8,9 +8,12 @@ nodes:
       nodeRegistration:
         kubeletExtraArgs:
           node-labels: "ingress-ready=true"
+  extraMounts:
+    - hostPath: ./data
+      containerPath: /data
+    - hostPath: ./db
+      containerPath: /db
   extraPortMappings:
-  - containerPort: 31080
-    hostPort: 31080
   - containerPort: 80
     hostPort: 80
     protocol: TCP
