20876/changed pull policy to Always

--- a/k8s/postgresql/postgresql.yaml
+++ b/k8s/postgresql/postgresql.yaml
@@ -64,7 +64,7 @@ spec:
       containers:
       - name: postgres
         image: postgis/postgis:13-3.0
-        imagePullPolicy: "IfNotPresent"
+        imagePullPolicy: "Always"
         # resources:
         #   requests:
         #     memory: "1024Mi"
