--- a/k8s/webapplication/webapplication.yaml
+++ b/k8s/webapplication/webapplication.yaml
@@ -35,11 +35,7 @@ spec:
       containers:
         - name: web-application
           image: registry.quantumobile.co/sip-web-application:latest
-          imagePullPolicy: "IfNotPresent"
-          # resources:
-            # limits:
-            #   memory: "500Mi"
-            #   cpu: "500m"
+          imagePullPolicy: "Always"
           command: ['/bin/bash', '-c', 'exec invoke run-prod']
           ports:
           - containerPort: 9000
