--- a/k8s/sip-deploy.yaml
+++ b/k8s/sip-deploy.yaml
@@ -24,7 +24,7 @@ data:
   POSTGRES_HOST: postgres
   POSTGRES_PORT: "5432"
   DJANGO_SETTINGS_MODULE: sip.settings-prod
-  SIP_PROD_ENV: "k8s"
+  NOTEBOOK_EXECUTION_ENVIRONMENT: "k8s"
 ---
 apiVersion: v1
 kind: Service
