20909/add settings to configMap and int conversion to in settings

--- a/k8s/sip-deploy.yaml
+++ b/k8s/sip-deploy.yaml
@@ -58,6 +58,13 @@ data:
   POSTGRES_PORT: "5432"
   DJANGO_SETTINGS_MODULE: sip.settings-prod
   NOTEBOOK_EXECUTION_ENVIRONMENT: "k8s"
+  NOTEBOOK_VALIDATION_JOB_ACTIVE_DEADLINE: "3000"
+  NOTEBOOK_VALIDATION_JOB_BACKOFF_LIMIT: "1"
+  K8S_NAME_SPACE: "sip"
+  IMAGE_PULL_SECRETS: "regcred"
+  NOTEBOOK_EXECUTOR_MAX_JOBS: "2"
+  NOTEBOOK_POD_DATA_VOLUME_MOUNT_PATH: "/home/jovyan/work"
+  GPU_CORES_PER_NOTEBOOK: "1"
 ---
 apiVersion: v1
 kind: Service
