--- a/data/notebooks/example/tci_ndvi_component/Dockerfile.jupyter
+++ b/data/notebooks/example/tci_ndvi_component/Dockerfile.jupyter
@@ -14,7 +14,7 @@ RUN mkdir /temp
 WORKDIR /code
 COPY ./ .
 
-RUN pip install jupyter
+RUN pip install jupyter==1.0.0
 RUN pip install -r requirements.txt
 
 ENTRYPOINT ["jupyter", "nbconvert", "--inplace", "--to=notebook", "--execute", "./TCI_NDVI.ipynb"]
