--- a/data/notebooks/example/tci_ndvi_component/Dockerfile.jupyter
+++ b/data/notebooks/example/tci_ndvi_component/Dockerfile.jupyter
@@ -17,4 +17,4 @@ COPY ./ .
 RUN pip install jupyter==1.0.0
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["jupyter", "nbconvert", "--inplace", "--to=notebook", "--execute", "./TCI_NDVI.ipynb"]
+CMD ["jupyter", "nbconvert", "--inplace", "--to=notebook", "--execute", "./TCI_NDVI.ipynb"]
